--- a/public/style.css
+++ b/public/style.css
@@ -18,12 +18,17 @@ svg {
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 3em;
+  font-size: 1em;
   font-family: 'Pixel Emulator';
   position: fixed;
   top: 0;
   left: 0;
-  background-color: #ffdba4;
+  background-color: #121318;
+  
+}
+.initial-loading img {
+  width: 300px;
+  height: 200px;
 }
 
 body {
